# skyline

./: CMakeLists.txt  README.md  setup.sh.in
algebra/: CMakeLists.txt  YAMLIntegration.h  vector.h
app/: CMakeLists.txt  CmdLine.cpp  CmdLine.h  GUI.cpp  GUI.h  Geometry.cpp  Geometry.h  LoadIntoCL.cpp  LoadIntoCL.h  builder.cpp  oneCell.cpp
camera/: CMakeLists.txt  CameraController.cpp  CameraController.h  CameraModel.cpp  CameraModel.h  FPSController.cpp  FPSController.h  View.cpp  WithCamera.cpp  WithCamera.h  YAMLIntegration.h  vector.h
engine/: CMakeLists.txt  View.cpp  View.h  WithCamera.cpp  WithCamera.h  WithRandomSeeds.cpp  WithRandomSeeds.h
examples/: CMakeLists.txt  concreteJungle.yaml  default.yaml  firstBoxes.yaml  hardEnough.yaml  sevenBoxes.yaml  testSkyBlue.xcf  testSkybox.yaml
examples/1024x512/: CMakeLists.txt  small_harbor_02_1k.hdr  testHDRSky.yaml
examples/800x600/: CMakeLists.txt
gl/: CMakeLists.txt  DebuggingMacros.h  Exception.cpp  Exception.h  Framebuffer.cpp  Framebuffer.h  Texture.cpp  TextureArray.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
imgui/: CMakeLists.txt
kernels/: CMakeLists.txt  generateRay.cl  linearCongruential.cl  pathTrace.cl  reuseFirstBounce.cl  skyline.cl
serial/: CMakeLists.txt  README.md  aabb.cpp  aabb.h  box.h  camera.cpp  camera.h  grid.cpp  grid.h  gridCell.h  groundPlane.cpp  groundPlane.h  material.h  ray.h  simple_sphere.h  sphere.cpp  sphere.h  vector.h
stb_image/: CMakeLists.txt
